@@ -1419,6 +1419,10 @@ follows:
   - +urgent+ references some window that is urgent.
   - +0x+'HEXID' -- where 'HEXID' is some hexadecimal number -- references the
     window with hexadecimal X11 window id 'HEXID'.
+  - +longest-minimized+ references the minimized window on the focused tag
+    that has been minimized for the longest time.
+  - +latest-minimized+ references the minimized window on the focused tag
+    that has been minimized most recently.
   - 'DECID' -- where 'DECID' is some decimal number -- references the window
     with the decimal X11 window id 'DECID'.
 
