@@ -86,13 +86,7 @@ hc keybind $Mod-s floating toggle
 hc keybind $Mod-f fullscreen toggle
 hc keybind $Mod-Shift-f set_attr clients.focus.floating toggle
 hc keybind $Mod-Shift-m set_attr clients.focus.minimized true
-# restore all minimized windows of the focused tag
-hc keybind $Mod-Ctrl-m foreach CLIENT clients. \
-     sprintf MINATT "%c.minimized" CLIENT \
-     sprintf TAGATT "%c.tag" CLIENT and \
-       , compare MINATT "=" "true" \
-       , substitute FOCUS "tags.focus.name" compare TAGATT "=" FOCUS \
-       , set_attr MINATT false
+hc keybind $Mod-Control-m jumpto last-minimized
 hc keybind $Mod-p pseudotile toggle
 # The following cycles through the available layouts within a frame, but skips
 # layouts, if the layout change wouldn't affect the actual window positions.
